@@ -25,6 +25,9 @@ basicGL
       1) Fixed a bug associated with readFrameBuffer() returning a
          boolean false, when it should return 0.
 
+   Image class
+      1) Updated to read BMP files on Big-endian systems
+
 --------------------------------------------------------------------------------
 dis
 
